<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="70">

        <LinearLayout
            android:id="@+id/configure_device_container"
            android:layout_width="@dimen/login_input_container_width"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_input_text_height"
                android:padding="10dp"
                android:src="@drawable/key" />

            <EditText
                android:id="@+id/device_id_input"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_input_text_height"
                android:width="@dimen/device_configuration_edit_text_width"
                android:background="@android:color/transparent"
                android:enabled="false"
                android:hint="@string/device_configuration_device_id"
                android:imeOptions="actionDone"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColorHint="@android:color/black" />

            <Button
                android:id="@+id/configure_deice_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:enabled="false"
                android:text="@string/device_configuration_button_name" />

            <ImageButton
                android:id="@+id/unlock_configuration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/passwordlogin"
                android:text="@string/device_configuration_button_name" />


        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/configure_device_container">


            <ImageView
                android:id="@+id/reaxium_device_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/reaxium_device" />

            <LinearLayout
                android:id="@+id/device_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reaxium_device_picture"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:gravity="end"
                        android:text="@string/reaxium_device_name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/device_configuration_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:id="@+id/reaxium_device_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/device_configuration_text_size" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/device_description_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/device_name_container"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:gravity="end"
                        android:text="@string/reaxium_device_Description"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/device_configuration_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:id="@+id/reaxium_device_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/device_configuration_text_size" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/device_status_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/device_description_container"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:gravity="end"
                        android:text="@string/reaxium_device_status"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/device_configuration_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:id="@+id/reaxium_device_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/device_configuration_text_size" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/device_app_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/device_status_container"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:gravity="end"
                        android:text="@string/reaxium_device_app_name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/device_configuration_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:id="@+id/reaxium_device_app_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/device_configuration_text_size" />

                </LinearLayout>


            </LinearLayout>



            <LinearLayout
                android:id="@+id/device_app_version_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/device_app_container"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:gravity="end"
                        android:text="@string/reaxium_device_app_version"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/device_configuration_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:id="@+id/reaxium_device_app_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/device_configuration_text_size" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/device_last_sync_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/device_app_version_container"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:gravity="end"
                        android:text="@string/reaxium_device_last_sync"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/device_configuration_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:id="@+id/reaxium_device_last_sync"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/device_configuration_text_size" />

                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="30">

        <RelativeLayout
            android:background="@drawable/login_box_shape"
            android:id="@+id/synchronize_device_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true">

            <ImageView
                android:id="@+id/synchronize_device"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:src="@drawable/synchronization" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/synchronize_device"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/synchronize_device"
                android:textColor="@android:color/black"
                android:textSize="@dimen/device_configuration_text_size" />

        </RelativeLayout>


    </RelativeLayout>


</LinearLayout>